namespacing & provide better composition with display
-include namespacing
-provide better coupling with display, and eliminate redundancy.
-May cause issues for concurrency of multiple files.
- get rid of useless functions

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "depends" : [
     "errors",
     "display",
-    "registers",
     "Strings",
-    "KUnit"
+    "KUnit",
+    "ktransw-macros"
   ]
 }
