split test dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "depends" : [
     "errors",
     "Strings",
-    "KUnit",
     "ktransw-macros"
+  ],
+  "tests-depends" : [
+    "KUnit"
   ]
 }
