--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "source" : [
     "src/files.kl"
   ],
+  "tests" : [
+    "test/test_files.kl"
+  ],
   "includes" : [
     "include"
   ],
@@ -17,6 +20,7 @@
     "ktransw-macros"
   ],
   "tests-depends" : [
-    "KUnit"
+    "KUnit",
+    "systemlib"
   ]
 }
